--- a/myApp/templates/login.html
+++ b/myApp/templates/login.html
@@ -6,7 +6,7 @@
 
 <div class="container-login"> 
 
-<h1 style="color: rgb(207, 12, 149);display: flex; justify-content: center; text-decoration: underline;">Log in</h1>
+<h1 style="color: rgb(207, 12, 149);display: flex; justify-content: center; text-decoration: underline;">Log-in</h1>
 
 <form action="" method="post" class="login-form" novalidate>
     {% csrf_token %}
